Fix border display on mobile

--- a/app/javascript/src/styles/specific/posts.scss
+++ b/app/javascript/src/styles/specific/posts.scss
@@ -33,6 +33,7 @@
 }
 
 article.post-preview {
+  box-sizing: border-box;
   height: 154px;
   width: 154px;
   margin: 0 10px 10px 0;
@@ -73,6 +74,7 @@ article.post-preview {
   }
 
   img {
+    box-sizing: border-box;
     margin: auto;
     max-height: 150px;
     max-width: 150px;
@@ -100,36 +102,39 @@ article.post-preview {
 }
 
 .post-preview {
-  img {
-    border: 2px solid transparent;
-  }
-
   &.post-status-has-children img {
+    border: 2px solid transparent;
     border-color: $preview-has-children-color;
   }
 
   &.post-status-has-parent img {
+    border: 2px solid transparent;
     border-color: $preview-has-parent-color;
   }
 
   &.post-status-has-children.post-status-has-parent img {
+    border: 2px solid transparent;
     border-color: $preview-has-children-color $preview-has-parent-color $preview-has-parent-color $preview-has-children-color;
   }
 
 
   &.post-status-deleted img {
+    border: 2px solid transparent;
     border-color: $preview-deleted-color;
   }
 
   &.post-status-has-children.post-status-deleted img {
+    border: 2px solid transparent;
     border-color: $preview-has-children-color $preview-deleted-color $preview-deleted-color $preview-has-children-color;
   }
 
   &.post-status-has-parent.post-status-deleted img {
+    border: 2px solid transparent;
     border-color: $preview-has-parent-color $preview-deleted-color $preview-deleted-color $preview-has-parent-color;
   }
 
   &.post-status-has-children.post-status-has-parent.post-status-deleted img {
+    border: 2px solid transparent;
     border-color: $preview-has-children-color $preview-deleted-color $preview-deleted-color $preview-has-parent-color;
   }
 
@@ -137,21 +142,25 @@ article.post-preview {
   /* Pending and flagged posts have blue borders (except in the modqueue). */
   &.post-status-pending:not(.mod-queue-preview) img,
   &.post-status-flagged:not(.mod-queue-preview) img {
+    border: 2px solid transparent;
     border-color: $preview-pending-color;
   }
 
   &.post-status-has-children.post-status-pending:not(.mod-queue-preview) img,
   &.post-status-has-children.post-status-flagged:not(.mod-queue-preview) img {
+    border: 2px solid transparent;
     border-color: $preview-has-children-color $preview-pending-color $preview-pending-color $preview-has-children-color;
   }
 
   &.post-status-has-parent.post-status-pending:not(.mod-queue-preview) img,
   &.post-status-has-parent.post-status-flagged:not(.mod-queue-preview) img {
+    border: 2px solid transparent;
     border-color: $preview-has-parent-color $preview-pending-color $preview-pending-color $preview-has-parent-color;
   }
 
   &.post-status-has-children.post-status-has-parent.post-status-pending:not(.mod-queue-preview) img,
   &.post-status-has-children.post-status-has-parent.post-status-flagged:not(.mod-queue-preview) img {
+    border: 2px solid transparent;
     border-color: $preview-has-children-color $preview-pending-color $preview-pending-color $preview-has-parent-color;
   }
 }
@@ -159,18 +168,22 @@ article.post-preview {
 /* Flagged posts have red borders for approvers. */
 body[data-user-can-approve-posts="true"] .post-preview {
   &.post-status-flagged img {
+    border: 2px solid transparent;
     border-color: $preview-flagged-color;
   }
 
   &.post-status-has-children.post-status-flagged img {
+    border: 2px solid transparent;
     border-color: $preview-has-children-color $preview-flagged-color $preview-flagged-color $preview-has-children-color;
   }
 
   &.post-status-has-parent.post-status-flagged img {
+    border: 2px solid transparent;
     border-color: $preview-has-parent-color $preview-flagged-color $preview-flagged-color $preview-has-parent-color;
   }
 
   &.post-status-has-children.post-status-has-parent.post-status-flagged img {
+    border: 2px solid transparent;
     border-color: $preview-has-children-color $preview-flagged-color $preview-flagged-color $preview-has-parent-color;
   }
 }
